# sample_python

./: hello.py  main.py  pyproject.toml
src/dataset/source_a/: collector.py
src/insight/: count.py  source_a.py
src/sample/dataset/source_a/: collector.py
src/sample/insight/: count.py
src/sample/sub_a/: a.py
src/sample/view/: normal.py  source_a.py
src/view/: source_a.py
sub_a/: a.py
sub_b/: b.py
