[project]
name = "sample-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = [
    "src",
]

python_files = [
    "*.py",
]

addopts = "--import-mode=importlib"
