[project]
name = "sample-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]
addopts = "--import-mode=importlib"


[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = [
    "src",
]

python_files = [
    "*.py",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "I",
    "UP",
    "PL",
    "PD",
    "RUF",
]
ignore = [
    "PD901",
]

exclude = [
    ".venv",
    "__pycache__",
]
